functional requirements done
