# internal/dto/dto.go
@@ -1,11 +1,0 @@
-package dto
-
-type ReceptionWithProducts struct {
-	Reception Reception `json:"reception"`
-	Products  []Product `json:"products"`
-}
-
-type PVZWithReceptions struct {
-	PVZ        PVZ                     `json:"pvz"`
-	Receptions []ReceptionWithProducts `json:"receptions"`
-}
