# internal/handler/http/pvz.go
@@ -9,34 +9,45 @@ import (
 	"github.com/Arzeeq/pvz-api/internal/dto"
 	"github.com/Arzeeq/pvz-api/internal/logger"
 	"github.com/go-playground/validator/v10"
+	openapi_types "github.com/oapi-codegen/runtime/types"
 )
 
 type PVZServicer interface {
 	CreatePVZ(ctx context.Context, payload dto.PostPvzJSONRequestBody) (*dto.PVZ, error)
-	GetPVZWithReceptions(ctx context.Context, payload dto.GetPvzParams) []dto.PVZWithReceptions
+	GetPVZWithReceptionsFiltered(ctx context.Context, payload dto.GetPvzParams) []dto.PVZWithReceptions
 }
 
-type PVZ struct {
-	pvzService PVZServicer
-	log        *logger.MyLogger
-	validator  *validator.Validate
-	timeout    time.Duration
+type PVZHandler struct {
+	pvzService       PVZServicer
+	receptionService ReceptionServicer
+	productService   ProductServicer
+	log              *logger.MyLogger
+	validator        *validator.Validate
+	timeout          time.Duration
 }
 
-func NewPvzHandler(pvzService PVZServicer, logger *logger.MyLogger, timeout time.Duration) (*PVZ, error) {
-	if pvzService == nil || logger == nil {
+func NewPvzHandler(
+	pvzService PVZServicer,
+	receptionService ReceptionServicer,
+	productService ProductServicer,
+	logger *logger.MyLogger,
+	timeout time.Duration,
+) (*PVZHandler, error) {
+	if pvzService == nil || receptionService == nil || productService == nil || logger == nil {
 		return nil, errors.New("nil values in NewPvzHandler constructor")
 	}
 
-	return &PVZ{
-		pvzService: pvzService,
-		log:        logger,
-		validator:  validator.New(),
-		timeout:    timeout,
+	return &PVZHandler{
+		pvzService:       pvzService,
+		receptionService: receptionService,
+		productService:   productService,
+		log:              logger,
+		validator:        validator.New(),
+		timeout:          timeout,
 	}, nil
 }
 
-func (h *PVZ) CreatePvz(w http.ResponseWriter, r *http.Request) {
+func (h *PVZHandler) CreatePvz(w http.ResponseWriter, r *http.Request) {
 	var pvzDto dto.PostPvzJSONRequestBody
 	if err := dto.Parse(r.Body, &pvzDto); err != nil {
 		h.log.HTTPError(w, http.StatusBadRequest, err)
@@ -59,7 +70,7 @@ func (h *PVZ) CreatePvz(w http.ResponseWriter, r *http.Request) {
 	h.log.HTTPResponse(w, http.StatusCreated, pvz)
 }
 
-func (h *PVZ) GetPVZ(w http.ResponseWriter, r *http.Request) {
+func (h *PVZHandler) GetPVZ(w http.ResponseWriter, r *http.Request) {
 	var pvzDto dto.GetPvzParams
 	if err := pvzDto.FromParams(r); err != nil {
 		h.log.HTTPResponse(w, http.StatusOK, nil)
@@ -70,6 +81,46 @@ func (h *PVZ) GetPVZ(w http.ResponseWriter, r *http.Request) {
 	ctx, cancel := context.WithTimeout(context.Background(), h.timeout)
 	defer cancel()
 
-	pvzs := h.pvzService.GetPVZWithReceptions(ctx, pvzDto)
+	pvzs := h.pvzService.GetPVZWithReceptionsFiltered(ctx, pvzDto)
 	h.log.HTTPResponse(w, http.StatusOK, pvzs)
+}
+
+func (h *PVZHandler) CloseReception(w http.ResponseWriter, r *http.Request) {
+	pathValue := r.PathValue("pvzId")
+	var pvzId openapi_types.UUID
+	err := pvzId.UnmarshalText([]byte(pathValue))
+	if err != nil {
+		h.log.HTTPError(w, http.StatusBadRequest, err)
+		return
+	}
+
+	ctx, cancel := context.WithTimeout(context.Background(), h.timeout)
+	defer cancel()
+
+	reception, err := h.receptionService.CloseReception(ctx, pvzId)
+	if err != nil {
+		h.log.HTTPError(w, http.StatusBadRequest, err)
+		return
+	}
+
+	h.log.HTTPResponse(w, http.StatusOK, reception)
+}
+
+func (h *PVZHandler) DeleteLastProduct(w http.ResponseWriter, r *http.Request) {
+	pathValue := r.PathValue("pvzId")
+	var pvzId openapi_types.UUID
+	err := pvzId.UnmarshalText([]byte(pathValue))
+	if err != nil {
+		h.log.HTTPError(w, http.StatusBadRequest, err)
+		return
+	}
+
+	ctx, cancel := context.WithTimeout(context.Background(), h.timeout)
+	defer cancel()
+
+	err = h.productService.DeleteLastProduct(ctx, pvzId)
+	if err != nil {
+		h.log.HTTPError(w, http.StatusBadRequest, err)
+		return
+	}
 }
